changed load icon and fixed align of save button

--- a/chromium/pages/popup/popup.css
+++ b/chromium/pages/popup/popup.css
@@ -193,7 +193,7 @@ body {
 
 .session .save {
     position: absolute;
-    top: -10px;
+    top: -5px;
     right: 0px;
     padding: 4px;
 }
